FIX: In Aozan2QCDataProcessor, fix NullPointerException when the report.url parameter is not set.